--- a/src/views/displayCRUD.ejs
+++ b/src/views/displayCRUD.ejs
@@ -14,6 +14,26 @@
         border: 1px solid black;
         border-collapse: collapse;
     }
+
+    .btn-edit {
+        outline: none;
+        border: none;
+        background: orange;
+        height: 25px;
+        width: 60px;
+        border-radius: 3px;
+        cursor: pointer;
+    }
+
+    .btn-delete {
+        outline: none;
+        border: none;
+        background: #ff023f;
+        height: 25px;
+        width: 60px;
+        border-radius: 3px;
+        cursor: pointer;
+    }
 </style>
 
 <body>
@@ -25,11 +45,7 @@
         <th>Firstname</th>
         <th>Lastname</th>
         <th>Address</th>
-    </tr>
-    <tr>
-        <td>Jill</td>
-        <td>Smith</td>
-        <td>50</td>
+        <th>Actions</th>
     </tr>
     <% for(let i=0; i < dataTable.length; i++) { %>
         <tr>
@@ -44,6 +60,10 @@
             </td>
             <td>
                 <%= dataTable[i].address %>
+            </td>
+            <td>
+                <a href="/edit-crud?id=<%= dataTable[i].id %>" class="btn-edit" type="button">Edit</a>
+                <a href="/delete-crud?id=<%= dataTable[i].id %>" class="btn-delete" type="button">Delete</a>
             </td>
         </tr>
         <% } %>
